# wlswitch

./: CMakeLists.txt  INSTALL.sh  README.md  TODO  TODO.txt  install.sh  wlswitch.cbp  wlswitch.depend  wlswitch.layout  wlswitch_sample.conf
doc/: DependConfigDoc  WlswitchConfigDoc  dependConfig_sample.conf  wlswitch_sample.conf
include/: marker.h  wlswitch.h
src/: main.cpp  marker.cpp  wlswitch.cpp
